[tool.poetry]
name = "nonebot-plugin-xiaohongshu"
version = "0.1.0"
description = "一个用于解析小红书链接的 nonebot2 插件"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bytedo/nonebot-plugin-xiaohongshu"
repository = "https://github.com/bytedo/nonebot-plugin-xiaohongshu"
documentation = "https://github.com/bytedo/nonebot-plugin-xiaohongshu/blob/main/README.md"
keywords = ["nonebot", "nonebot2", "xiaohongshu", "xhs", "spider", "image", "video"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"
nonebot-adapter-onebot = "^2.0.0"
httpx = ">=0.20.0"
pydantic = ">=1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nonebot]
plugins = ["nonebot_plugin_xiaohongshu"]
adapters = [
    { name = "OneBot V11", module = "nonebot.adapters.onebot.v11" }
]